Fix visual overflow of clear slider handle

--- a/style.css
+++ b/style.css
@@ -143,13 +143,13 @@ body {
 
   box-shadow: inset 3px 3px 5px 0 #222;
   z-index: 2;
-  width: inherit;
+  width: calc(var(--slider-frame-width) + 2px);
   height: inherit;
   border-radius: inherit;
 
   position: absolute;
   top: 0;
-  left: 0;
+  left: -2px;
 
   pointer-events: none;
 }
